[package]
name = "mercenaries"
version = "0.1.0"
authors = ["Esbysie <esbysie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.2"
ezing = "0.2.1"
uuid = "0.8"

[profile.dev.package.bevy]
opt-level = 1